testdata/compiler/invalid/import-cycle-a.pt
import "import-cycle-b.pt"

req a:
	GET /a

flow "x":
	a -> a : a2
